# pixiv-dl-py

./: .gitignore  README.rst  pixiv-dl.py  pyproject.toml  tag_exploder.py
pixiv_dl/: __main__.py  config.py  db.py  downloader.py  filter.py
pixiv_dl/webserver/: __init__.py  __main__.py  queriers.py  structs.py
pixiv_dl/webserver/static/: custom.css
pixiv_dl/webserver/templates/: artwork_info.html  bookmarks.html  frontpage.html  tags.html  users.html  util.jinja2
pixiv_dl/webserver/templates/artwork_view/: artwork_base.html  multiple.html  single.html
pixiv_dl/webserver/templates/grids/: base_grid.html  bookmark_grid.html  helpers.html  oneuser_grid.html  random_grid.html  raw_grid.html  tags_grid.html
pixiv_dl/webserver/templates/meta/: artwork_grid.html  base.html  pagination.html
