[tool.poetry]
name = "pixiv-dl"
version = "0.1.2"
description = "A tool to download from pixiv"
authors = ["Laura F Dickinson <l@veriny.tf>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/Fuyukai/pixiv-dl"

[tool.poetry.dependencies]
python = "^3.7"
pixivpy = "^3.5.0"
arrow = "^0.15.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
twine = "^2.0.0"

[tool.poetry.scripts]
pixiv-dl = 'pixiv_dl.downloader:main'

[tool.black]
line-length = 100
target_version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
