[tool.poetry]
name = "pixiv-dl"
version = "0.4.0"
description = "A tool to download from pixiv"
authors = ["Laura F Dickinson <l@veriny.tf>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/Fuyukai/pixiv-dl"

[tool.poetry.dependencies]
python = "^3.7"
pixivpy = "^3.5.0"
termcolor = "^1.1.0"
tomlkit = "^0.5.8"
flask = "^1.1.1"
pendulum = "^2.0.5"
sqlalchemy = "^1.3.13"

[tool.poetry.extras]
filter = ["jq"]

[tool.poetry.dev-dependencies]
black = "^19.3b0"
twine = "^2.0.0"

[tool.poetry.scripts]
pixiv-dl = 'pixiv_dl.downloader:main'
pixiv-filter = 'pixiv_dl.filter:main'

[tool.black]
line-length = 100
target_version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
