[tool.poetry]
name = "pixiv-dl"
version = "0.4.0"
description = "A tool to download from pixiv"
authors = ["Laura F Dickinson <l@veriny.tf>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/Fuyukai/pixiv-dl"

[tool.poetry.dependencies]
python = "^3.9"
pixivpy = "^3.6.1"
termcolor = "^1.1.0"
tomlkit = "^0.5.11"
flask = "^2.0.2"
pendulum = "^2.0.5"
sqlalchemy = "^1.4.27"

[tool.poetry.extras]
filter = ["jq"]

[tool.poetry.dev-dependencies]
black = "^21.11b1"
twine = "^2.0.0"
isort = "^5.10.1"

[tool.poetry.scripts]
pixiv-dl = 'pixiv_dl.downloader:main'
pixiv-filter = 'pixiv_dl.filter:main'

[tool.black]
line-length = 100
target_version = ['py39']

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
